compiler/testData/diagnostics/tests/scopes/ImportsUselessSimpleImport.jet
package a

import <!USELESS_SIMPLE_IMPORT!>B<!>

object B {}
